--- a/bruinmarket/package.json
+++ b/bruinmarket/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bruinmarket",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.6",
+    "link": "^1.5.1",
+    "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
